styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");

* {
  box-sizing: border-box;
}

/* Custom Scrollbar */
/* width */
::-webkit-scrollbar {
  width: 9px;
}
/* Track */
::-webkit-scrollbar-track {
  background: transparent;
  border-radius: 5px;
}
/* Handle */
::-webkit-scrollbar-thumb {
  background: rgb(48, 48, 48);
}
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgb(36, 36, 36);
}

body {
  font-family: "Poppins", sans-serif;
  background-color: #282828;
  color: white;
  margin: 0;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 100vh;
  margin: auto 1.5rem;
}
.container {
  display: flex;
  flex-direction: column;
}
.btn {
  background: linear-gradient(90deg, rgb(245, 51, 132), rgb(194, 65, 211));
  border-radius: 500px;
  border: none;
  color: #f1f1f1;
  margin: 0.8rem;
  padding: 0.25rem 1.8rem;
  font-size: 1.1rem;
  font-family: inherit;
  cursor: pointer;
}
.btn:active {
  transform: scale(1.05);
}
.btn:hover {
  box-shadow: 0 2px 5px rgba(255, 255, 255, 0.3);
}

